--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ nav {
     height: 100vh;
     position: absolute;
     right: 0;
-    top: 0
+    top: 0;
 }
 nav ul li {
     list-style: none;
@@ -54,8 +54,12 @@ nav a {
     padding-top: 1em;
     padding-bottom: 1em
 }
-section button {
-    padding: 1em 1em
+button {
+    padding: 1em 1em;
+}
+#buttons button {
+    border-radius: 50%;
+    margin-right: 1em
 }
 #button1 {
    background: linear-gradient(45deg,black, white)
